Create new functionality for refunding.
